# Serial-Monitor

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Readme.md
include/: serialPort.h
src/: ReadSerialPort.c  serialPort.c
